--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-hot-loader": "^1.3.1"
+    "react-hot-loader": "^1.3.1",
+    "semantic-ui-react": "^0.71.0"
   }
 }
