--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
-    "semantic-ui-react": "^0.71.0"
+    "semantic-ui-react": "^0.71.0",
+    "sinon": "^2.3.8"
   }
 }
